[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/ui/mainmenu_buttons.gd" type="Script" id=2]

[node name="Main_Menu" type="Control"]
margin_right = 1920.0
margin_bottom = 1080.0

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -222.5
margin_top = -199.5
margin_right = 222.5
margin_bottom = 199.5
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="title" type="Label" parent="Buttons"]
margin_right = 445.0
margin_bottom = 58.0
theme = ExtResource( 1 )
text = "Roguelike Pasta"
align = 1
valign = 1

[node name="play" type="Button" parent="Buttons"]
margin_top = 74.0
margin_right = 445.0
margin_bottom = 171.0
rect_pivot_offset = Vector2( -608, -72 )
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Play"

[node name="options" type="Button" parent="Buttons"]
margin_top = 187.0
margin_right = 445.0
margin_bottom = 285.0
rect_pivot_offset = Vector2( -608, -72 )
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Options"

[node name="quit" type="Button" parent="Buttons"]
margin_top = 301.0
margin_right = 445.0
margin_bottom = 399.0
rect_pivot_offset = Vector2( -608, -72 )
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Quit"

[connection signal="pressed" from="Buttons/play" to="Buttons" method="_on_play_pressed"]
[connection signal="pressed" from="Buttons/options" to="Buttons" method="_on_options_pressed"]
[connection signal="pressed" from="Buttons/quit" to="Buttons" method="_on_quit_pressed"]
